docs/envoy/v1.7.1/_sources/api-v2/config/filter/network/client_ssl_auth/v2/client_ssl_auth.proto.rst.txt
.. _envoy_api_file_envoy/config/filter/network/client_ssl_auth/v2/client_ssl_auth.proto:

Client TLS authentication
=========================

Client TLS authentication
:ref:`configuration overview <config_network_filters_client_ssl_auth>`.

.. _envoy_api_msg_config.filter.network.client_ssl_auth.v2.ClientSSLAuth:

config.filter.network.client_ssl_auth.v2.ClientSSLAuth
------------------------------------------------------

`[config.filter.network.client_ssl_auth.v2.ClientSSLAuth proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/config/filter/network/client_ssl_auth/v2/client_ssl_auth.proto#L15>`_


.. code-block:: json

  {
    "auth_api_cluster": "...",
    "stat_prefix": "...",
    "refresh_delay": "{...}",
    "ip_white_list": []
  }

.. _envoy_api_field_config.filter.network.client_ssl_auth.v2.ClientSSLAuth.auth_api_cluster:

auth_api_cluster
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The :ref:`cluster manager <arch_overview_cluster_manager>` cluster that runs
  the authentication service. The filter will connect to the service every 60s to fetch the list
  of principals. The service must support the expected :ref:`REST API
  <config_network_filters_client_ssl_auth_rest_api>`.
  
  
.. _envoy_api_field_config.filter.network.client_ssl_auth.v2.ClientSSLAuth.stat_prefix:

stat_prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The prefix to use when emitting :ref:`statistics
  <config_network_filters_client_ssl_auth_stats>`.
  
  
.. _envoy_api_field_config.filter.network.client_ssl_auth.v2.ClientSSLAuth.refresh_delay:

refresh_delay
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) Time in milliseconds between principal refreshes from the
  authentication service. Default is 60000 (60s). The actual fetch time
  will be this value plus a random jittered value between
  0-refresh_delay_ms milliseconds.
  
  
.. _envoy_api_field_config.filter.network.client_ssl_auth.v2.ClientSSLAuth.ip_white_list:

ip_white_list
  (:ref:`core.CidrRange <envoy_api_msg_core.CidrRange>`) An optional list of IP address and subnet masks that should be white
  listed for access by the filter. If no list is provided, there is no
  IP white list.
  
  

